change prisma model, openapi docs for imagekit upload
